[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/character_data/character_sheet.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/player_characters/theandra.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_assets/fonts/Perfect DOS VGA 437.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameStrings" type="CanvasLayer" parent="."]

[node name="CharacterName" type="Label" parent="NameStrings"]
margin_left = 20.0
margin_top = 21.0
margin_right = 356.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.396078, 0.454902, 0.533333, 1 )
text = "Character Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassStrings" type="CanvasLayer" parent="."]

[node name="Class" type="Label" parent="ClassStrings"]
margin_left = 20.0
margin_top = 110.0
margin_right = 120.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.396078, 0.454902, 0.533333, 1 )
text = "Class"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassTitle" type="Label" parent="ClassStrings"]
margin_left = 15.0
margin_top = 75.0
margin_right = 95.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.647059, 0.678431, 0.717647, 1 )
text = "Class"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Container Spaces" type="CanvasLayer" parent="."]
layer = -1

[node name="NameSpace" type="ColorRect" parent="Container Spaces"]
margin_left = 10.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 55.0
color = Color( 0.101961, 0.0980392, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassSpace" type="ColorRect" parent="Container Spaces"]
margin_left = 10.0
margin_top = 100.0
margin_right = 410.0
margin_bottom = 140.0
color = Color( 0.101961, 0.0980392, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.156863, 0.156863, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
